# agent-hq

./: .env.example  .gitignore  .mcp.json  README.md  playwright-mcp-config.json
.claude/commands/: bug.md  chore.md  classify_adw.md  classify_issue.md  conditional_docs.md  document.md  feature.md  install.md  install_worktree.md  prepare_app.md  review.md  start.md  test.md  (+1 more)
adws/: README.md
ai_docs/: openclaw_gateway_api.md
app/: README.md
app/server/: README.md  dashboard_routes.py  gateway_client.py  gateway_models.py  gateway_routes.py  pyproject.toml  server.py
app/server/tests/: test_agent_crud_routes.py  test_gateway_client.py  test_gateway_routes.py
app_docs/: agentic_kpis.md  feature-d35db10d-dashboard-fleet-overview.md  feature-fb641441-agents-fleet-roster-crud.md
product-plan/: README.md  product-overview.md
scripts/: copy_dot_env.sh  deploy.sh  reset_db.sh  setup_env.sh  start.sh  start_all.sh  start_client.sh  start_server.sh  stop_apps.sh
specs/: issue--adw--sdlc_planner-application-shell.md  issue--adw--sdlc_planner-openclaw-gateway-integration.md  issue-1-adw-2402ba81-sdlc_planner-dashboard-health-monitoring-widget.md  issue-1-adw-b622c6b1-sdlc_planner-dashboard-health-monitoring-widget.md  issue-12-adw-d35db10d-sdlc_planner-dashboard-fleet-overview-widget-grid.md  issue-1253b82d-adw-1-sdlc_planner-dashboard-health-monitoring-widget.md  issue-15-adw-fb641441-sdlc_planner-agents-fleet-roster-crud.md  issue-18-adw-4c165818-sdlc_planner-fix-agents-module-resolution.md  issue-20-adw-b1c6a3e0-sdlc_planner-fix-gateway-missing-operator-scope.md
(+137 files in other folders)
